--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,16 @@
     min-height: 100px;
     background-color: pink;
     border: 2px solid black;
-    text-align: center;
     line-height: 100px;
+    justify-content: center;
 }
+
+.box-nested{
+    min-height: 85px;
+    background-color: coral;
+    border: 1px solid white;
+    text-align: center;
+    line-height: 85px;
+    margin: 4px 0;
+}
+
