--- a/css/12bool.css
+++ b/css/12bool.css
@@ -22,65 +22,7 @@
     flex: 0 0 auto;
 }
 
-.col-xs {
-    flex-grow: 1;
-    flex-basis: 0;
-    max-width: 100%;
-}
-
-.col-xs-1 {
-    flex-basis: calc((100% / 12) * 1);
-    max-width: calc((100% / 12) * 1);
-}
-.col-xs-2 {
-    flex-basis: calc((100% / 12) * 2);
-    max-width: calc((100% / 12) * 2);
-}
-.col-xs-3 {
-    flex-basis: calc((100% / 12) * 3);
-    max-width: calc((100% / 12) * 3);
-}
-.col-xs-4 {
-    flex-basis: calc((100% / 12) * 4);
-    max-width: calc((100% / 12) * 4);
-}
-.col-xs-5 {
-    flex-basis: calc((100% / 12) * 5);
-    max-width: calc((100% / 12) * 5);
-}
-.col-xs-6 {
-    flex-basis: calc((100% / 12) * 6);
-    max-width: calc((100% / 12) * 6);
-}
-.col-xs-7 {
-    flex-basis: calc((100% / 12) * 7);
-    max-width: calc((100% / 12) * 7);
-}
-.col-xs-8 {
-    flex-basis: calc((100% / 12) * 8);
-    max-width: calc((100% / 12) * 8);
-}
-.col-xs-9 {
-    flex-basis: calc((100% / 12) * 9);
-    max-width: calc((100% / 12) * 9);
-}
-.col-xs-10 {
-    flex-basis: calc((100% / 12) * 10);
-    max-width: calc((100% / 12) * 10);
-}
-.col-xs-11 {
-    flex-basis: calc((100% / 12) * 11);
-    max-width: calc((100% / 12) * 11);
-}
-.col-xs-12 {
-    flex-basis: calc((100% / 12) * 12);
-    max-width: calc((100% / 12) * 12);
-}
-
-
-/*display responsive*/
-
-@media screen and (max-width: 576px){
+@media screen and (min-width: 576px){
 
     .container{
         width: 540px;
@@ -145,7 +87,67 @@
     .center-sm{
         justify-content: center;
     }
+}
 
 
+@media screen and (min-width: 992px){
 
+    .container{
+        width: 100%;
+    }
 
+    .col-lg {
+        flex-grow: 1;
+        flex-basis: 0;
+        max-width: 100%;
+    }
+    
+    .col-lg-1 {
+        flex-basis: calc((100% / 12) * 1);
+        max-width: calc((100% / 12) * 1);
+    }
+    .col-lg-2 {
+        flex-basis: calc((100% / 12) * 2);
+        max-width: calc((100% / 12) * 2);
+    }
+    .col-lg-3 {
+        flex-basis: calc((100% / 12) * 3);
+        max-width: calc((100% / 12) * 3);
+    }
+    .col-lg-4 {
+        flex-basis: calc((100% / 12) * 4);
+        max-width: calc((100% / 12) * 4);
+    }
+    .col-lg-5 {
+        flex-basis: calc((100% / 12) * 5);
+        max-width: calc((100% / 12) * 5);
+    }
+    .col-lg-6 {
+        flex-basis: calc((100% / 12) * 6);
+        max-width: calc((100% / 12) * 6);
+    }
+    .col-lg-7 {
+        flex-basis: calc((100% / 12) * 7);
+        max-width: calc((100% / 12) * 7);
+    }
+    .col-lg-8 {
+        flex-basis: calc((100% / 12) * 8);
+        max-width: calc((100% / 12) * 8);
+    }
+    .col-lg-9 {
+        flex-basis: calc((100% / 12) * 9);
+        max-width: calc((100% / 12) * 9);
+    }
+    .col-lg-10 {
+        flex-basis: calc((100% / 12) * 10);
+        max-width: calc((100% / 12) * 10);
+    }
+    .col-lg-11 {
+        flex-basis: calc((100% / 12) * 11);
+        max-width: calc((100% / 12) * 11);
+    }
+    .col-lg-12 {
+        flex-basis: calc((100% / 12) * 12);
+        max-width: calc((100% / 12) * 12);
+    }
+}
